# Recruitment_Optimizer_agent

./: .env  README.md  app.py  candidates.db  code_structure.py  database.py  hf.py  main.py  match_score.py  project_structure.txt  pyproject.toml  tools.py  view_db.py
agents/: candidates.db  cv_faiss_index  cv_metadata.pkl  cv_parser_2.py  embed_cv.py  embed_jd.py  jd_faiss_index  jd_metadata.pkl  jd_summa_FAISS.py  jd_summarizer.py  match_candidates.py
local_model/: config.json  config_sentence_transformers.json
