[project]
name = "recruitment-optimizer-agent"
version = "0.1.0"
description = ""
authors = [
    {name = "Hari Priyaa",email = "hari.learnprog@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12,<4.0"
dependencies = [
    "python-dotenv (>=1.1.0,<2.0.0)",
    "black (>=25.1.0,<26.0.0)",
    "isort (>=6.0.1,<7.0.0)",
    "ollama (>=0.4.7,<0.5.0)",
    "fitz (>=0.0.1.dev2,<0.0.2)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
